# ResearchAgent

./: .env.example  CLAUDE.md  README.md  pyproject.toml
tests/: test_config.py  test_experiment.py  test_json_parsers.py  test_key_manager.py  test_llm_models.py  test_logging.py  test_main_helpers.py  test_token_tracking.py  test_yanzhi_init.py
yanzhi/: __init__.py  config.py  key_manager.py  llm.py  llm_factory.py  log.py  main.py  research.py
yanzhi/experiment_agents/: __init__.py  agents_graph.py  data_fetch.py  dataset_finder.py  env_setup.py  executor.py  experiment_node.py  parameters.py  progress.py  prompts.py
yanzhi/langgraph_agents/: agents_graph.py  idea.py  literature.py  methods.py  parameters.py  pdf_reader.py  prompts.py  reader.py  referee.py  routers.py
yanzhi/paper_agents/: agents_graph.py  journal.py  latex.py  latex_presets.py  paper_node.py  parameters.py  prompts.py  reader.py  routers.py  tools.py
yanzhi_app/: app.py  cli.py  components.py  constants.py  utils.py
yanzhi_app/pages/: direction.py  idea.py  literature.py  methods.py  overview.py  paper.py  referee.py  results.py  settings.py
