[project]
name = "yanzhi"
version = "1.0.0"
description = "中文多智能体科研助手 — Chinese Multi-Agent Research Assistant"
authors = [
  { name = "Lianning LBY" },
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "GPLv3" }
keywords = ["machine learning", "agent", "research", "llm", "chinese", "科研助手"]

dependencies = [
  "langchain-google-genai",
  "langchain-anthropic>=0.3.10",
  "langchain-openai>=0.3.12",
  "langgraph>=0.3.25",
  "google-ai-generativelanguage>=0.6.17",
  "pymupdf",
  "jsonschema",
  "json5",
]

[project.urls]
Repository = "https://github.com/LianningLBY/ResearchAgent"

[project.scripts]
yanzhi = "yanzhi_app.cli:run"

[project.optional-dependencies]
app = ["streamlit>=1.40.0", "streamlit-pdf-viewer"]
db  = ["supabase>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yanzhi", "yanzhi_app"]
